added missing lib

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,4 @@ lib_deps =
 	arduino-libraries/Servo@^1.1.8
 	dfrobot/DFRobotDFPlayerMini@^1.0.5
 	featherfly/SoftwareSerial@^1.0
+	arduino-libraries/SD@^1.2.4
